--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tiptap/react": "^3.13.0",
+    "@tiptap/starter-kit": "^3.13.0",
+    "@types/dompurify": "^3.0.5",
+    "dompurify": "^3.3.1",
+    "marked": "^17.0.1",
     "next": "14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
